--- a/Stability.ipynb
+++ b/Stability.ipynb
@@ -6,7 +6,7 @@
       "name": "Stability.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMrP7JZp1Q4lPsWlhaPwi9k",
+      "authorship_tag": "ABX9TyNlan5bdzUAK4AaQPWg1i+Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/yokabicarpmaz/ME462_ControlSystemsTools/blob/master/Stability.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ceydakoruk/ME462_ControlSystemsTools/blob/master/Stability.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -338,8 +338,8 @@
         "plt.title(\"Roots in Complex Coordinate\")\n",
         "plt.show()\n",
         "#Displacement vs. Time Plot\n",
-        "t = np.linspace(0,5,501)\n",
-        "t,x = cnt.step_response(TF,t)   #step response of the system from transfer function\n",
+        "t = np.linspace(0,5,501)   #time duration between 0 and 5 s divided into 501 points\n",
+        "t,x = cnt.step_response(TF,t)   #step response of the system from transfer function where t is the time and x is the displacement of mass\n",
         "plt.plot(t,x)\n",
         "plt.xlabel(\"Time [s]\")\n",
         "plt.ylabel(\"Displacement of mass [m]\")\n",
@@ -518,8 +518,8 @@
         "plt.title(\"Roots in Complex Coordinate\")\n",
         "plt.show()\n",
         "#Displacement vs. Time Plot\n",
-        "t = np.linspace(0,5,501)\n",
-        "t,y = cnt.step_response(TF,t)   #step response of the system from transfer function\n",
+        "t = np.linspace(0,5,501)  #time duration between 0 and 5 s divided into 501 points\n",
+        "t,y = cnt.step_response(TF,t)   #step response of the system from transfer function where t is the time and y is the displacement of car\n",
         "plt.plot(t,y)\n",
         "plt.xlabel(\"Time [s]\")\n",
         "plt.ylabel(\"Displacement of car body in y-axis\")\n",
