--- a/transfer_function.ipynb
+++ b/transfer_function.ipynb
@@ -6,7 +6,7 @@
       "name": "transfer_function.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMAeYI1wWfoLtqfkjHFGfYb",
+      "authorship_tag": "ABX9TyOPfHX8NZeiltxALxHHaa1M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/yokabicarpmaz/ME462_ControlSystemsTools/blob/master/transfer_function.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ceydakoruk/ME462_ControlSystemsTools/blob/master/transfer_function.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -287,8 +287,8 @@
         "TF = cnt.tf(num,den)\n",
         "print(\"G(s)=\",TF)\n",
         "#Displacement vs. Time Plot\n",
-        "t = np.linspace(0,5,501)\n",
-        "t,x = cnt.step_response(TF,t)   #step response of the system from transfer function\n",
+        "t = np.linspace(0,5,501)   #time duration between 0 and 5 s divided into 501 points\n",
+        "t,x = cnt.step_response(TF,t)   #step response of the system from transfer function where t is the time and x is the displacement of mass\n",
         "plt.plot(t,x)\n",
         "plt.xlabel(\"Time [s]\")\n",
         "plt.ylabel(\"Displacement of mass\")\n",
@@ -323,8 +323,8 @@
         "TF = cnt.tf(num,den)\n",
         "print(\"G(s)=\",TF)\n",
         "#Displacement vs. Time Plot\n",
-        "t = np.linspace(0,5,501)\n",
-        "t,x = cnt.step_response(TF,t)   #step response of the system from transfer function\n",
+        "t = np.linspace(0,5,501)   #time duration between 0 and 5 s divided into 501 points\n",
+        "t,x = cnt.step_response(TF,t)   #step response of the system from transfer function where t is the time and x is the displacement of mass\n",
         "plt.plot(t,x)\n",
         "plt.xlabel(\"Time [s]\")\n",
         "plt.ylabel(\"Displacement of mass [m]\")\n",
@@ -445,9 +445,9 @@
         "TF = cnt.tf(num,den)\n",
         "print(\"G(s)=\",TF)\n",
         "#Displacement vs. Time Plot\n",
-        "t = np.linspace(0,5,501)\n",
-        "T,y = cnt.step_response(TF,t)   #step response of the system from transfer function\n",
-        "plt.plot(T,y)\n",
+        "t = np.linspace(0,5,501)   #time duration between 0 and 5 s divided into 501 points\n",
+        "t,y = cnt.step_response(TF,t)   #step response of the system from transfer function where t is the time and y is the displacement of car\n",
+        "plt.plot(t,y)\n",
         "plt.xlabel(\"Time [s]\")\n",
         "plt.ylabel(\"Displacement of car body in y-axis\")\n",
         "plt.show()"
@@ -481,9 +481,9 @@
         "TF = cnt.tf(num,den)\n",
         "print(\"G(s)=\",TF)\n",
         "#Displacement vs. Time Plot\n",
-        "t = np.linspace(0,5,501)\n",
-        "T,y = cnt.step_response(TF,t)   #step response of the system from transfer function\n",
-        "plt.plot(T,y)\n",
+        "t = np.linspace(0,5,501)   #time duration between 0 and 5 s divided into 501 points\n",
+        "t,y = cnt.step_response(TF,t)   #step response of the system from transfer function where t is the time and y is the displacement of car\n",
+        "plt.plot(t,y)\n",
         "plt.xlabel(\"Time [s]\")\n",
         "plt.ylabel(\"displacement of car body in y-axis\")\n",
         "plt.show()"
